fixed overflow sections

--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -18,15 +18,13 @@ body {
 
 header {
   border-bottom: 5px solid var(--main-theme);
-  height: 10vh;
+  height: 100px;
   border-bottom: 5px solid var(--main-theme);
   margin: 20px;
 }
 .name {
   display: inline-block;
   font-size: 30px;
-  width: 300px;
-  height: 100%;
 }
 
 nav {
@@ -104,8 +102,6 @@ h2:hover,
 }
 
 .page-wrapper {
-  padding: 0 auto;
-  margin: 20px;
 }
 
 #about {
@@ -131,7 +127,7 @@ h2:hover,
 }
 
 #work {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   font-size: 20px;
@@ -238,7 +234,7 @@ h2:hover,
 .page-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+
   height: auto;
 }
 
